# mcp-project

./: .gitignore  README.md  conftest.py  mcp_config.json  pyproject.toml  pytest.ini  temp.py
app/: main.py
app/chat/: chat.py
app/llm/: client.py  ollama.py  schemas.py
app/mcp/: config.py  server.py
app/tests/mcp/: conftest.py  test_config.py  test_fetch_integration.py  test_filesystem_integration.py  test_mcp_integration.py  test_server.py
