[project]
name = "ollama-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "jsonschema>=4.23.0",
    "mcp>=1.6.0",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.pytest]
testpaths = ["app/tests"]
markers = [
    "integration: marks tests as integration tests",
    "fetch: marks tests that require internet access",
    "filesystem: marks tests that require filesystem access"
]
filterwarnings = [
    "ignore::ResourceWarning:asyncio.*",
    "ignore::RuntimeWarning:asyncio.*"
]
